code splitting - markdown

--- a/Quantum.ipynb
+++ b/Quantum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1035,
+   "execution_count": 1294,
    "id": "a7abeffb",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f961b665",
+   "metadata": {},
+   "source": [
+    "# Discrete Quantum Random Walks On The Line\n",
+    "\n",
+    "This is a notebook about random walks on the line\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9001323a",
+   "metadata": {},
+   "source": [
+    "## quantum version of the unitary matrix\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f91629bb",
+   "metadata": {},
+   "source": [
+    "### initialize_state\n",
+    "\n",
+    "this function maps an integer number from bits to qubits\n",
+    "\n",
+    "for 3 bits n=3\n",
+    "000 -> |000>\n",
+    "001 -> |001>\n",
+    "...\n",
+    "2^n -> |2^n>\n",
+    "\n",
+    "for n bits we have 2^n different states"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1036,
+   "execution_count": 1295,
    "id": "b0f64204",
    "metadata": {},
    "outputs": [],
@@ -29,14 +65,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "301bc0a9",
+   "metadata": {},
+   "source": [
+    "### Input\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1037,
+   "execution_count": 1296,
    "id": "cdddddef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''quantum version of the unitary matrix'''\n",
-    "num = \"10101\"\n",
+    "num = \"00001\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f87d722e",
+   "metadata": {},
+   "source": [
+    "### Circuit Initialization\n",
+    "The Quantum circuit has quantum registers to execute the algorithm\n",
+    "and classical registers to measure the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1297,
+   "id": "e7fdd7de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "num_of_qubits = len(num)\n",
     "cr = ClassicalRegister(num_of_qubits)\n",
     "qr = QuantumRegister(num_of_qubits)\n",
@@ -44,70 +106,130 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1038,
-   "id": "2112a360",
+   "cell_type": "markdown",
+   "id": "ed87c5e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4] 4\n",
-      "[0, 1, 2, 3] 3\n",
-      "[0, 1, 2] 2\n",
-      "[0, 1] 1\n"
-     ]
-    }
-   ],
    "source": [
-    "\n",
-    "initialize_state(qc, num)\n",
-    "size = len(num) - 1\n",
-    "for i in range(size, 0, -1):\n",
-    "    arr = []\n",
-    "    for j in range(i):\n",
-    "        arr.append(j)\n",
-    "    arr.append(i)\n",
-    "    cx_gate = XGate().control(i)\n",
-    "    qc.append(cx_gate, arr)\n",
-    "    print(arr,  i)"
+    "### State initialization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1039,
-   "id": "6496d168",
+   "execution_count": 1298,
+   "id": "0247e457",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initialize_state(qc, num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1299,
+   "id": "2112a360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transition_state(qc, num, ctrl_state=None):\n",
+    "    for target_qubit in range(len(num) - 1, 0, -1):\n",
+    "        qargs = [control_qubit for control_qubit in range(target_qubit)]\n",
+    "        qargs.append(target_qubit)\n",
+    "        cx_gate = XGate().control(target_qubit, ctrl_state=ctrl_state)\n",
+    "        qc.append(cx_gate, qargs)\n",
+    "    qc.x(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1300,
+   "id": "3bc55726",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# positive transition\n",
+    "transition_state(qc, num)\n",
+    "\n",
+    "# # negative transition\n",
+    "# transition_state(qc, num, ctrl_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1305,
+   "id": "2c9ff2cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">         ┌───────────┐                                                      »\n",
+       "q2364_0: ┤ U3(π,0,π) ├──■────■─────────────────────■─────────────────────■──»\n",
+       "         └───────────┘  │    │                     │             ┌───┐   │  »\n",
+       "q2364_1: ───────────────■────■─────────■───────────┼─────────■───┤ T ├───┼──»\n",
+       "                        │    │  ┌───┐┌─┴─┐┌─────┐┌─┴─┐┌───┐┌─┴─┐┌┴───┴┐┌─┴─┐»\n",
+       "q2364_2: ───────────────■────■──┤ H ├┤ X ├┤ Tdg ├┤ X ├┤ T ├┤ X ├┤ Tdg ├┤ X ├»\n",
+       "                        │  ┌─┴─┐└┬─┬┘└───┘└─┬─┬─┘└───┘└───┘└───┘└─────┘└───┘»\n",
+       "q2364_3: ───────────────■──┤ X ├─┤M├────────┤M├─────────────────────────────»\n",
+       "                      ┌─┴─┐└┬─┬┘ └╥┘  ┌─┐   └╥┘                             »\n",
+       "q2364_4: ─────────────┤ X ├─┤M├───╫───┤M├────╫──────────────────────────────»\n",
+       "                      └───┘ └╥┘   ║   └╥┘    ║                              »\n",
+       " c186: 5/════════════════════╩════╩════╩═════╩══════════════════════════════»\n",
+       "                             4    3    4     3                              »\n",
+       "«               ┌───┐           ┌───────────┐┌─┐   ┌─┐\n",
+       "«q2364_0: ──■───┤ T ├───■────■──┤ U3(π,0,π) ├┤M├───┤M├\n",
+       "«         ┌─┴─┐┌┴───┴┐┌─┴─┐┌─┴─┐└────┬─┬────┘└╥┘┌─┐└╥┘\n",
+       "«q2364_1: ┤ X ├┤ Tdg ├┤ X ├┤ X ├─────┤M├──────╫─┤M├─╫─\n",
+       "«         ├───┤└┬───┬┘└┬─┬┘└┬─┬┘     └╥┘      ║ └╥┘ ║ \n",
+       "«q2364_2: ┤ T ├─┤ H ├──┤M├──┤M├───────╫───────╫──╫──╫─\n",
+       "«         └───┘ └───┘  └╥┘  └╥┘       ║       ║  ║  ║ \n",
+       "«q2364_3: ──────────────╫────╫────────╫───────╫──╫──╫─\n",
+       "«                       ║    ║        ║       ║  ║  ║ \n",
+       "«q2364_4: ──────────────╫────╫────────╫───────╫──╫──╫─\n",
+       "«                       ║    ║        ║       ║  ║  ║ \n",
+       "« c186: 5/══════════════╩════╩════════╩═══════╩══╩══╩═\n",
+       "«                       2    2        1       0  1  0 </pre>"
+      ],
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x17f27a5f0>"
+       "         ┌───────────┐                                                      »\n",
+       "q2364_0: ┤ U3(π,0,π) ├──■────■─────────────────────■─────────────────────■──»\n",
+       "         └───────────┘  │    │                     │             ┌───┐   │  »\n",
+       "q2364_1: ───────────────■────■─────────■───────────┼─────────■───┤ T ├───┼──»\n",
+       "                        │    │  ┌───┐┌─┴─┐┌─────┐┌─┴─┐┌───┐┌─┴─┐┌┴───┴┐┌─┴─┐»\n",
+       "q2364_2: ───────────────■────■──┤ H ├┤ X ├┤ Tdg ├┤ X ├┤ T ├┤ X ├┤ Tdg ├┤ X ├»\n",
+       "                        │  ┌─┴─┐└┬─┬┘└───┘└─┬─┬─┘└───┘└───┘└───┘└─────┘└───┘»\n",
+       "q2364_3: ───────────────■──┤ X ├─┤M├────────┤M├─────────────────────────────»\n",
+       "                      ┌─┴─┐└┬─┬┘ └╥┘  ┌─┐   └╥┘                             »\n",
+       "q2364_4: ─────────────┤ X ├─┤M├───╫───┤M├────╫──────────────────────────────»\n",
+       "                      └───┘ └╥┘   ║   └╥┘    ║                              »\n",
+       " c186: 5/════════════════════╩════╩════╩═════╩══════════════════════════════»\n",
+       "                             4    3    4     3                              »\n",
+       "«               ┌───┐           ┌───────────┐┌─┐   ┌─┐\n",
+       "«q2364_0: ──■───┤ T ├───■────■──┤ U3(π,0,π) ├┤M├───┤M├\n",
+       "«         ┌─┴─┐┌┴───┴┐┌─┴─┐┌─┴─┐└────┬─┬────┘└╥┘┌─┐└╥┘\n",
+       "«q2364_1: ┤ X ├┤ Tdg ├┤ X ├┤ X ├─────┤M├──────╫─┤M├─╫─\n",
+       "«         ├───┤└┬───┬┘└┬─┬┘└┬─┬┘     └╥┘      ║ └╥┘ ║ \n",
+       "«q2364_2: ┤ T ├─┤ H ├──┤M├──┤M├───────╫───────╫──╫──╫─\n",
+       "«         └───┘ └───┘  └╥┘  └╥┘       ║       ║  ║  ║ \n",
+       "«q2364_3: ──────────────╫────╫────────╫───────╫──╫──╫─\n",
+       "«                       ║    ║        ║       ║  ║  ║ \n",
+       "«q2364_4: ──────────────╫────╫────────╫───────╫──╫──╫─\n",
+       "«                       ║    ║        ║       ║  ║  ║ \n",
+       "« c186: 5/══════════════╩════╩════════╩═══════╩══╩══╩═\n",
+       "«                       2    2        1       0  1  0 "
       ]
      },
-     "execution_count": 1039,
+     "execution_count": 1305,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "qc.x(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1040,
-   "id": "2c9ff2cf",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# qc.decompose().draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1041,
+   "execution_count": 1306,
    "id": "e448a7ed",
    "metadata": {},
    "outputs": [
@@ -115,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'010110': 1024}\n"
+      "{'00010': 1024}\n"
      ]
     }
    ],
